# tendon_arm_control

./: README.md  ReadMe.md
Sensing/: ReadMe.md
Sensing/modules/GyemsCAN/: gyems.cpp  gyemsManager.cpp  gyemsManager.hpp  gyems_can_functions.h.old
Sensing/modules/SocketCAN/: SocketCAN.hpp
Sensing/test_walker/: CMakeLists.txt  SEA_test.cpp  main.cpp
modules/GyemsCAN/: gyems.hpp  gyemsManager.hpp  gyems_can_functions.cpp.old
modules/SocketCAN/: CMakeLists.txt
modules/rtsetup/: rtsetup.c  rtsetup.h  rtutils.h
tendon_arm_control/: ReadMe.md  can_init.sh
tendon_arm_control/modules/GyemsCAN/: CMakeLists.txt  Makefile  cmake_install.cmake  gyemsManager.cpp
tendon_arm_control/modules/SocketCAN/: SocketCAN.cpp
tendon_arm_control/modules/rtsetup/: rtutils.c
tendon_arm_control/test_motors/: Controller_test.cpp  Controller_test.hpp
tendon_arm_control/test_motors/data/: states_record.txt
test_motors/: CMakeLists.txt  Controller_test.cpp  main.cpp
